# go-iceinu

./: .gitignore  LICENSE  README.md  config.example.toml  go.mod  数据库部署指南.md
.github/workflows/: go.yml  release.yml
bot/: config.toml  go.mod  go.sum  main.go
bot/config/: config.go
bot/core/: economy_manager.go  event_manager.go  fetcher.go  plugin_manager.go  roles_manager.go  start_bot.go  user_manager.go
bot/db/: initialize.go
bot/models/: events.go  help.go  tables.go
bot/plugins/: bank_plugin.go  example_plugin.go  fetch_plugin.go  help_plugin.go  init.go  manager.go  plugin_manager.go  roles_plugin.go
bot/rules/: custom_rules.go
bot/utils/: colorful.go
bot/zerobot/: start_bot.go
cli/: README.md  pyproject.toml
cli/iceinu-manager/: main.py
